Fix for #2175 - DateField wrap problem
svn changeset:5702/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/datefield/datefield.css
+++ b/WebContent/ITMILL/themes/default/datefield/datefield.css
@@ -1,3 +1,7 @@
+.i-datefield {
+	white-space: nowrap;
+}
+
 .i-datefield-textfield {
 	vertical-align: top;
 }
